--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "react-dom": "^19.2.4",
     "lucide-react": "^0.575.0",
-    "react": "^19.2.4"
+    "react": "^19.2.4",
+    "@vercel/blob": "^0.27.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "@vercel/node": "^3.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
