knowledge base demo

--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.4",
+    "@vercel/blob": "^0.27.1",
+    "google-tts-api": "^2.0.2",
+    "groq-sdk": "^0.37.0",
     "lucide-react": "^0.575.0",
     "react": "^19.2.4",
-    "@vercel/blob": "^0.27.1"
+    "react-dom": "^19.2.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
     "@vercel/node": "^3.0.0",
+    "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
